# Mimir

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: agent-integration.md  benchmarks.md  decisions.md  eval.md  mcp-user-guide.md  roadmap.md  skill-distillation.md
mimir/: __init__.py  cli.py  eval.py
mimir/adapters/: __init__.py  agents.py
mimir/application/: __init__.py  factories.py
mimir/application/events/: __init__.py  event_bus.py
mimir/benchmarks/: __init__.py  longmemeval.py  longmemeval_metrics.py
mimir/core/: __init__.py  config.py  inference.py  learning.py  mimir.py  prototype_store.py
mimir/domain/: __init__.py
mimir/eval_data/: __init__.py
mimir/hooks/: mimir_turn.py  skill_interceptor.py  skill_observer.py
mimir/infrastructure/: __init__.py  context_discovery.py  quality_gate.py  redaction.py  store_queue.py
mimir/mcp/: __init__.py  context.py  server.py  session.py  tools.py
mimir/setup/: __init__.py
mimir/skills/: __init__.py  expander.py  extractor.py  injector.py  revisor.py  store.py  tracker.py  validator.py
mimir/tests/: __init__.py  fake_engine.py  test_agent_adapter.py  test_application_factories.py  test_async_store.py  test_checkpoint_repository.py  test_cli.py  test_config.py  test_context_discovery.py  test_convergence.py  test_embedding_engines.py  test_engine_factory.py  test_eval.py  test_event_bus.py  test_filtering.py  test_hooks.py  test_longmemeval.py  test_mcp_server.py  test_mcp_session.py  test_mcp_tools.py  test_mimir.py  test_p1_features.py  test_prediction_eval.py  test_prototype_store.py  test_quality_gate.py  test_recall_postprocessor.py  test_redaction.py  test_retrieval.py  test_setup.py  test_skill_interceptor.py  test_skill_observer.py  test_skills.py
plugins/opencode/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: benchmark_embedding_backends.py
(+45 files in other folders)
