[project]
name = "mimir-core"
version = "0.2.0"
description = "A plastic memory well for coding agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "isletspace" },
]
keywords = [
    "embedding",
    "memory",
    "plasticity",
    "mimir",
    "agent-memory",
    "mcp",
    "prototype-network",
    "coding-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch >= 2.0.0",
    "numpy >= 1.24.0",
    "httpx >= 0.27.2",
    "mcp >= 1.0.0",
]

[project.optional-dependencies]
server = [
    "sentence-transformers >= 2.5.0",
]
dev = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "ruff >= 0.3.0",
    "mypy >= 1.8.0",
]
api = [
    "openai >= 1.0.0",
]

[project.scripts]
mimir = "mimir.cli:main"

[project.urls]
Homepage = "https://github.com/Liewzheng/Mimir"
Documentation = "https://github.com/Liewzheng/Mimir/blob/main/docs/roadmap.md"
Repository = "https://github.com/Liewzheng/Mimir"

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mimir*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["mimir/tests"]
asyncio_mode = "auto"
